util: Use virtual thread for delays